--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>xuwei.tech</groupId>
     <artifactId>FlinkExample</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>flink_learn</module>
+    </modules>
 
     <dependencies>
         <dependency>
